syntax = "proto3";
package expero;
//Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\packages\Grpc.Tools.0.13.1\tools\windows_x86\protoc.exe Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\Models\protos\TruckingService.proto --csharp_out=Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\Models\. -I Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\Models\protos\ --plugin=protoc-gen-grpc=Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\packages\Grpc.Tools.0.13.1\tools\windows_x64\grpc_csharp_plugin.exe --grpc_out=Y:\Documents\experoinc\github\NDC-Oslo-2016\NDC.Oslo\Models

service Trucking
{
	rpc RecordLocation(stream Point) returns (stream Response);
	rpc ReadLastLocation(Trip) returns (Point);
}

message Point {
  Trip trip = 1;
  float latitude = 2;
  float longitude = 3;
}

message Trip 
{
  string truck_name=1;
  string truck_manufacturer=2;
  string trip_id=3;
}


message Response {
  int32 response_time = 1;
}
